// GitHub Release Notificator — Database Schema
// Generated from src/db/schema.ts
// https://dbdiagram.io/

Table users {
  id serial [pk, increment]
  email varchar(255) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    email [unique, name: 'users_email_idx']
  }
}

Table repositories {
  id serial [pk, increment]
  owner varchar(255) [not null]
  repo varchar(255) [not null]
  last_seen_tag varchar(255)
  last_checked_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (owner, repo) [unique, name: 'repositories_owner_repo_idx']
  }
}

Table subscriptions {
  id serial [pk, increment]
  user_id integer [not null, ref: > users.id]
  repository_id integer [not null, ref: > repositories.id]
  status varchar(20) [not null, default: 'pending']
  confirm_token varchar(64) [not null]
  unsubscribe_token varchar(64) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, repository_id) [unique, name: 'subscriptions_user_repo_idx']
    confirm_token [name: 'subscriptions_confirm_token_idx']
    unsubscribe_token [name: 'subscriptions_unsubscribe_token_idx']
    status [name: 'subscriptions_status_idx']
  }
}

Table scan_jobs {
  id serial [pk, increment]
  status varchar(20) [not null]
  repos_checked integer [not null, default: 0]
  releases_found integer [not null, default: 0]
  notifications_created integer [not null, default: 0]
  error_count integer [not null, default: 0]
  error_message text
  started_at timestamp [not null]
  finished_at timestamp
}

Table notifications {
  id serial [pk, increment]
  subscription_id integer [not null, ref: > subscriptions.id]
  type varchar(20) [not null]
  release_tag varchar(255)
  status varchar(20) [not null, default: 'pending']
  error_message text
  attempts integer [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
  sent_at timestamp

  indexes {
    status [name: 'notifications_status_idx']
    subscription_id [name: 'notifications_subscription_id_idx']
  }
}
